feat: impl UserNameToken